# KansasInstrument

./: .gitignore  .releaserc  CMakeLists.txt  README.md
.github/workflows/: CD.yml  multi_platform_CI.yml
include/basic/: custom_string.h  dyn_array.h  invalid.h  lexer.h  node.h  number.h  operator_sign.h  parser.h  word.h
mains/: CMakeLists.txt  main.cpp
src/basic/: CMakeLists.txt  custom_string.cpp  invalid.cpp  lexer.cpp  node.cpp  number.cpp  operator_sign.cpp  parser.cpp  word.cpp
tests/: CMakeLists.txt  test_custom_string.cpp  test_lexer.cpp  test_operator_sign.cpp  test_parser.cpp  test_word.cpp
